--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -58,15 +58,26 @@
             {% elif eventFrame %}
                 <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
                 <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-                    selectedId = eventFrame.Element.ElementTemplate.Site.Enterprise.EnterpriseId) }}'>
-                    {{ eventFrame.Element.ElementTemplate.Site.Enterprise.Name }}</a></li>
+                    selectedId = eventFrame.origin().Element.ElementTemplate.Site.Enterprise.EnterpriseId) }}'>
+                    {{ eventFrame.origin().Element.ElementTemplate.Site.Enterprise.Name }}</a></li>
                 <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-                    selectedId = eventFrame.Element.ElementTemplate.Site.SiteId) }}'>{{ eventFrame.Element.ElementTemplate.Site.Name }}</a></li>
+                    selectedId = eventFrame.origin().Element.ElementTemplate.Site.SiteId) }}'>{{ eventFrame.origin().Element.ElementTemplate.Site.Name }}</a>
+                    </li>
                 <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
-                    selectedId = eventFrame.Element.ElementTemplate.ElementTemplateId) }}'>{{ eventFrame.Element.ElementTemplate.Name }}</a></li>
+                    selectedId = eventFrame.origin().Element.ElementTemplate.ElementTemplateId) }}'>{{ eventFrame.origin().Element.ElementTemplate.Name }}</a>
+                    </li>
                 <li><a href = '{{ url_for("eventFrames.selectEventFrame", selectedClass = "EventFrameTemplate",
-                    selectedId = eventFrame.EventFrameTemplate.EventFrameTemplateId) }}'>{{ eventFrame.EventFrameTemplate.Name }}</a></li>
-                <li><a href = '{{ url_for("eventFrames.dashboard", eventFrameId = eventFrame.EventFrameId) }}'>{{ eventFrame.Name }}</a></li>
+                    selectedId = eventFrame.origin().EventFrameTemplate.EventFrameTemplateId) }}'>{{ eventFrame.origin().EventFrameTemplate.Name }}</a></li>
+                {% set eventFrames = eventFrame.ancestors([]) %}
+                {% do eventFrames.append(eventFrame) %}
+                {% for eventFrame in eventFrames %}
+                    {% if eventFrame.ParentEventFrameId == None %}
+                        <li><a href = '{{ url_for("eventFrames.dashboard", eventFrameId = eventFrame.EventFrameId) }}'>{{ eventFrame.Name }}</a></li>
+                    {% else %}
+                        <li><a href = '{{ url_for("eventFrames.dashboard", eventFrameId = eventFrame.EventFrameId) }}'>
+                                {{ eventFrame.EventFrameTemplate.Name }}&nbsp;&nbsp;/&nbsp;&nbsp;{{ eventFrame.Name }}</a></li>
+                    {% endif %}
+                {% endfor %}
                 <li><a href = '{{ url_for("tagValues.listTagValues", eventFrameId = eventFrame.EventFrameId,
                     eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}'>{{ eventFrameAttribute.EventFrameAttributeTemplate.Name }}</a></li>
                 <li class = "active">
