--- a/app/templates/eventFrames/addEdit.html
+++ b/app/templates/eventFrames/addEdit.html
@@ -3,6 +3,29 @@
 {% block scripts %}
     {{ super() }}
     <script>
+        function populateSourceEventFrameList()
+        {
+            var eventFrameTemplateId = $("#eventFrameTemplate").val()
+            $.ajax(
+            {
+                type : "POST",
+                url : "/eventFrames/getSourceEventFrames/" + eventFrameTemplateId
+            }).done(function(sourceEventFrames)
+            {
+                var selectSourceEventFrame = $("#sourceEventFrame")
+                selectSourceEventFrame.empty().append($("<option />").val(-1).text(""))
+                $.each(sourceEventFrames, function(i)
+                {
+                    selectSourceEventFrame.append($("<option />").val(sourceEventFrames[i].value).text(sourceEventFrames[i].name))
+                })
+            }).fail(function()
+            {
+                $(".alert").remove()
+                $("#divFlashedMessages").append('<div class = "alert alert-danger"><button type = "button" class = "close" ' +
+                    'data-dismiss = "alert">&times;</button>The attempt to update the Source Event Frame list has failed.</div>')                        
+            })
+        }
+
         function setUtcTimestamps()
         {
             var startTimestamp = $("#startTimestamp").val()
@@ -50,6 +73,11 @@
                 {
                     setUtcTimestamps()
                 }
+            })
+
+            $("#eventFrameTemplate").on("change", function()
+            {
+                populateSourceEventFrameList()
             })
         })
     </script>
