Fixed DataTables search/tabbing bug.

--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -366,6 +366,7 @@
                 setTabIndex()
             })
             setTabIndex()
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
