--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -557,6 +557,7 @@
             })
             checkForNotifications()
             setTabIndex()
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
