--- a/app/templates/lookups/select.html
+++ b/app/templates/lookups/select.html
@@ -129,6 +129,7 @@
             })
 
             $("#lookupsTable").attr("style", "width:100%")
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
