--- a/app/templates/physicalModels/select.html
+++ b/app/templates/physicalModels/select.html
@@ -147,6 +147,8 @@
                     event.preventDefault()
                 }
             })
+
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
