--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -208,6 +208,7 @@
             })
 
             $("#tagValueNotesTable").attr("style", "width:100%")
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
