--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -270,6 +270,7 @@
 
             $("#tagValuesTable").attr("style", "width:100%")
             $("#divLoading").attr("style", "display:none")
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
