--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -198,6 +198,7 @@
                 setTabIndex()
             })
             setTabIndex()
+            $('ol.breadcrumb a[title="Next"]').focus()
         })
     </script>
 {% endblock %}
