--- a/app/templates/eventFrameGroups/addNewEventFrames.html
+++ b/app/templates/eventFrameGroups/addNewEventFrames.html
@@ -161,11 +161,11 @@
                 var elementId = $(this).parent().parent().attr("data-elementId")
                 var eventFrameTemplateId = $(this).parent().parent().attr("data-eventFrameTemplateId")
                 rowToMove = availableNewEventFramesTable.row($(this).parent().parent())
-                var movedRow = selectedNewEventFramesTable.row.add(rowToMove.data()).draw().node()
+                var movedRow = selectedNewEventFramesTable.row.add(rowToMove.data()).draw("full-hold").node()
                 $(movedRow).find("span").removeClass("glyphicon glyphicon-plus").addClass("glyphicon glyphicon-minus")
                 $(movedRow).attr("data-elementId", elementId)
                 $(movedRow).attr("data-eventFrameTemplateId", eventFrameTemplateId)
-                rowToMove.remove().draw()
+                rowToMove.remove().draw("full-hold")
             })
 
             $("#selectedNewEventFramesTable tbody").on("click", "tr td button", function()
@@ -173,11 +173,11 @@
                 var elementId = $(this).parent().parent().attr("data-elementId")
                 var eventFrameTemplateId = $(this).parent().parent().attr("data-eventFrameTemplateId")
                 rowToMove = selectedNewEventFramesTable.row($(this).parent().parent())
-                var movedRow = availableNewEventFramesTable.row.add(rowToMove.data()).draw().node()
+                var movedRow = availableNewEventFramesTable.row.add(rowToMove.data()).draw("full-hold").node()
                 $(movedRow).find("span").removeClass("glyphicon glyphicon-minus").addClass("glyphicon glyphicon-plus")
                 $(movedRow).attr("data-elementId", elementId)
                 $(movedRow).attr("data-eventFrameTemplateId", eventFrameTemplateId)
-                rowToMove.remove().draw()
+                rowToMove.remove().draw("full-hold")
             })
 
             $("#buttonSave").on("click", function()
